chore: refactor Dockerfile
This is an overhaul of the Dockerfile that attempts to address multiple
issues.

* simplfy the setup.py/requirements.in set up to be more standardised
* multistage docker build to avoid shipping build and dev dependencies
* use buildkit and some tricks to make local image rebuilding faster
* specify system and build dependencies explictly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,12 @@ services:
     depends_on:
       - mssql
   app:
-    build: .
+    image: cohortextractor-dev
+    build: 
+      context: .
+      target: cohortextractor-dev
     volumes:
-      - .:/home/app/notebook
+      - .:/app
     depends_on:
       - mssql
       - trino
