feat: Revert "Merge pull request #623 from opensafely-core/steve/revert-starburst-presto"
This reverts commit 2047f1092d3bfc2ecdcab070392fc4dbaa2160ce, reversing
changes made to bb5d2e9faa8e3e5aa35824edcfe2e48d088be59c.

Slightly confusingly, this is a revert of a revert.

Order of events:
1. EMIS updated Starburst to a Trino-based version. This caused our
   tests to fail because we check the Starburst version that EMIS run.
2. We updated cohort-extractor to work with Trino (#619). Our tests then
   passed following this merge.
3. EMIS reverted back to a Presto-based version. Our tests failed again.
4. We reverted #619 in #623. Our tests then passed again following this
   merge.
5. (**not yet happened**) EMIS will later move back to a Trino-based
   version. Our tests will fail again. That is when this commit should
   be merged again.

See the initial revert (#623) for more details.

--- a/.env-test
+++ b/.env-test
@@ -1,6 +1,6 @@
 TPP_DATABASE_URL=mssql://SA:Your_password123!@localhost:15785/Test_OpenCorona
 TPP_TEMP_DATABASE_NAME=OPENCoronaTempTables
-EMIS_DATABASE_URL=presto://localhost:8080/mssql/dbo
+EMIS_DATABASE_URL=trino://localhost:8080/mssql/dbo
 EMIS_DATASOURCE_DATABASE_URL=mssql://SA:Your_password123!@localhost:15785/Test_EMIS
 EMIS_ORGANISATION_HASH=emis_organisation_hash
 DATABRICKS_DATABASE_URL=databricks
