--- a/.github/workflows/test_runner.yaml
+++ b/.github/workflows/test_runner.yaml
@@ -41,8 +41,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m venv venv
           venv/bin/pip install --progress-bar=off --requirement requirements.txt
-      - name: Start SQL Server and Presto instances for the tests
-        run: docker-compose up -d mssql presto
+      - name: Start SQL Server and Trino instances for the tests
+        run: docker-compose up -d mssql trino
       - name: Run tests
         run: |
           source ${{ github.workspace }}/venv/bin/activate
