--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - ./mssql:/mssql
     ports:
       - "15785:1433"
-  presto:
-    image: "starburstdata/presto:350-e.11"
+  trino:
+    image: "starburstdata/starburst-enterprise:356-e.5"
     ports:
       - "8080:8080"
     volumes:
-      - ./presto/etc:/usr/lib/presto/etc/
+      - ./starburst/etc:/etc/starburst
     depends_on:
       - mssql
   app:
@@ -25,4 +25,4 @@ services:
       - .:/home/app/notebook
     depends_on:
       - mssql
-      - presto
+      - trino
