--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ exclude = '''
     | \.venv
     | certs
     | mssql
-    | presto
+    | starburst
     | venv
   )/
 )
@@ -20,4 +20,4 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
-skip_glob = ["*.egg-info", ".direnv", ".venv", "certs", "mssql", "presto", "venv"]
+skip_glob = ["*.egg-info", ".direnv", ".venv", "certs", "mssql", "starburst", "venv"]
