--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ click==7.1.2
     # via
     #   black
     #   pip-tools
-    #   presto-python-client
+    #   trino
 cryptography==3.3.2
     # via pyopenssl
 https://github.com/opensafely/ctds-binary/raw/9466f4bdb8eb70318256115c3bbb6b3ecc9351d0/dist/ctds-1.13.0-cp38-cp38-manylinux2014_x86_64.whl#egg=ctds ; sys_platform == "linux"
@@ -54,13 +54,6 @@ identify==1.5.11
     # via pre-commit
 idna==2.9
     # via requests
-importlib-metadata==4.6.0
-    # via
-    #   flake8
-    #   pluggy
-    #   pre-commit
-    #   pytest
-    #   virtualenv
 isort==5.7.0
     # via -r requirements.in
 kiwisolver==1.2.0
@@ -98,14 +91,12 @@ pluggy==0.13.1
     # via pytest
 pre-commit==2.9.3
     # via -r requirements.in
-presto-python-client==0.7.0
-    # via opensafely-cohort-extractor
-py4j==0.10.9
-    # via pyspark
 py==1.10.0
     # via
     #   pytest
     #   retry
+py4j==0.10.9
+    # via pyspark
 pyarrow==3.0.0
     # via opensafely-cohort-extractor
 pycodestyle==2.6.0
@@ -124,15 +115,15 @@ pyparsing==2.4.7
     #   packaging
 pyspark==3.1.2
     # via opensafely-cohort-extractor
-pytest-freezegun==0.4.2
-    # via -r requirements.in
-pytest-subtests==0.5.0
-    # via -r requirements.in
 pytest==5.4.2
     # via
     #   -r requirements.in
     #   pytest-freezegun
     #   pytest-subtests
+pytest-freezegun==0.4.2
+    # via -r requirements.in
+pytest-subtests==0.5.0
+    # via -r requirements.in
 python-dateutil==2.8.1
     # via
     #   freezegun
@@ -146,13 +137,13 @@ pyyaml==5.4.0
     #   pre-commit
 regex==2020.11.13
     # via black
-requests-pkcs12==1.9
-    # via opensafely-cohort-extractor
 requests==2.25.0
     # via
     #   opensafely-cohort-extractor
-    #   presto-python-client
     #   requests-pkcs12
+    #   trino
+requests-pkcs12==1.9
+    # via opensafely-cohort-extractor
 retry==0.9.2
     # via opensafely-cohort-extractor
 scipy==1.4.1
@@ -165,9 +156,9 @@ six==1.14.0
     #   cycler
     #   freezegun
     #   packaging
-    #   presto-python-client
     #   pyopenssl
     #   python-dateutil
+    #   trino
     #   virtualenv
 sqlalchemy==1.3.15
     # via opensafely-cohort-extractor
@@ -183,22 +174,18 @@ toml==0.10.2
     # via
     #   black
     #   pre-commit
+trino==0.305.0
+    # via opensafely-cohort-extractor
 typed-ast==1.4.2
     # via black
 typing-extensions==3.7.4.3
-    # via
-    #   black
-    #   importlib-metadata
-    #   structlog
+    # via black
 urllib3==1.26.5
     # via requests
 virtualenv==20.2.2
     # via pre-commit
 wcwidth==0.1.9
     # via pytest
-zipp==3.4.1
-    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
-# setuptools
