--- a/starburst/etc/catalog/mssql.properties
+++ b/starburst/etc/catalog/mssql.properties
@@ -1,4 +1,4 @@
 connector.name=sqlserver
-connection-url=jdbc:sqlserver://mssql:1433;databasename=Test_EMIS
+connection-url=jdbc:sqlserver://mssql:1433;database=Test_EMIS
 connection-user=SA
 connection-password=Your_password123!
