ci: Revert "ci: Change Trino to Presto"
This reverts commit 4cd9a15c547b7a66e6a69a72cb9339fa698ed86e.

This is necessary to fix up the workflow introduced in #624, which was
originally written for Trino. This workflow was then amended for Presto
in the 4cd9a15 commit reverted here.

--- a/.github/workflows/emis_trino_version_check.yaml
+++ b/.github/workflows/emis_trino_version_check.yaml
@@ -1,4 +1,4 @@
-name: Check Presto version on EMIS and in docker-compose.yml match
+name: Check Trino version on EMIS and in docker-compose.yml match
 
 on:
   workflow_dispatch:
@@ -6,8 +6,8 @@ on:
     - cron: '0 8 * * 1-5'
 
 jobs:
-  check-presto-version:
-    name: Check Presto version
+  check-starburst-version:
+    name: Check Starburst version
     runs-on: ubuntu-latest
 
     steps:
@@ -26,4 +26,4 @@ jobs:
       - name: Run version check test
         run: |
           source ${{ github.workspace }}/venv/bin/activate
-          TEST_PRESTO_DOCKER_VERSION=1 PYTHONPATH=. pytest -vvv tests/test_presto_docker_version.py
+          TEST_TRINO_DOCKER_VERSION=1 PYTHONPATH=. pytest -vvv tests/test_trino_docker_version.py
