ci: Change "Starburst" to "Trino" for consistency
This is how things were before 165a5a0549e731717dacda6e4a511332576218ea
— that is, "Presto" was used in these lines.

--- a/.github/workflows/emis_trino_version_check.yaml
+++ b/.github/workflows/emis_trino_version_check.yaml
@@ -6,8 +6,8 @@ on:
     - cron: '0 8 * * 1-5'
 
 jobs:
-  check-starburst-version:
-    name: Check Starburst version
+  check-trino-version:
+    name: Check Trino version
     runs-on: ubuntu-latest
 
     steps:
